--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="header-nav">
             <a href="./index.html" class="header-logo link">WEB<span class="header-logo-accent">Studio</span></a>
             <ul class="header-menu list">
-                <li class="header-menu-item"><a class="header-menu-link link" href="./index.html">Studio</a></li>
+                <li class="header-menu-item"><a class="header-menu-link link current" href="./index.html">Studio</a></li>
                 <li class="header-menu-item"><a class="header-menu-link link" href="./portfolio.html">Portfolio</a></li>
                 <li class="header-menu-item"><a class="header-menu-link link" href="">Contacts</a></li>
             </ul>
@@ -39,7 +39,7 @@
         <section class="hero">
             <div class="container hero-container">
             <h1 class="hero-title">Effective Solutions for Your Business</h1>
-            <button type="button" class="hero-btn">Order Service</button>
+            <button type="button" class="hero-btn" data-modal-open>Order Service</button>
             </div>
         </section>
 
@@ -48,6 +48,11 @@
             <h2 class="visually-hidden">Benefits</h2>
             <ul class="benefits-list list">
                 <li class="benefits-item">
+                    <div class="benefits-item-block">
+                        <svg width="64" height="64">
+                            <use href="./images/symbol-defs.svg#icon-antenna"></use>
+                        </svg>
+                    </div>
                     <h3 class="benefits-item-subtitle">Strategy</h3>
                     <p class="benefits-item-text">
                         Our goal is to identify the business
@@ -56,6 +61,11 @@
                     </p>
                 </li>
                 <li class="benefits-item">
+                    <div class="benefits-item-block">
+                        <svg width="64" height="64">
+                            <use href="./images/symbol-defs.svg#icon-clock"></use>
+                        </svg>
+                    </div>
                     <h3 class="benefits-item-subtitle">Punctuality</h3>
                     <p class="benefits-item-text">
                         Bring the key message to the
@@ -64,6 +74,11 @@
                     </p>
                 </li>
                 <li class="benefits-item">
+                    <div class="benefits-item-block">
+                        <svg width="64" height="64">
+                            <use href="./images/symbol-defs.svg#icon-diagram"></use>
+                        </svg>
+                    </div>
                     <h3 class="benefits-item-subtitle">Diligence</h3>
                     <p class="benefits-item-text">
                         Research and confirm brands that
@@ -72,6 +87,11 @@
                     </p>
                 </li>
                 <li class="benefits-item">
+                    <div class="benefits-item-block">
+                        <svg width="64" height="64">
+                            <use href="./images/symbol-defs.svg#icon-astronaut"></use>
+                        </svg>
+                    </div>
                     <h3 class="benefits-item-subtitle">Technologies</h3>
                     <p class="benefits-item-text">
                         Design practice focused on digital
@@ -109,6 +129,44 @@
                     <div class="team-item-container">
                     <h3 class="team-item-subtitle">Mark Guerrero</h3>
                     <p class="team-item-text">Product Designer</p>
+                    <ul class="team-soc">
+                        <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" aria-label="instagram">
+                            <span>
+                            <svg class="team-soc-icon" width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                            </svg>
+                            </span>
+                        </a>
+                        </li>
+                        <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" aria-label="twitter">
+                            <span>
+                            <svg class="team-soc-icon" width="24" height="24">
+                                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                            </svg> 
+                            </span>
+                        </a>
+                        </li>
+                        <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" aria-label="facebook">
+                            <span>
+                            <svg class="team-soc-icon" width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                            </svg>  
+                            </span>
+                        </a>
+                        </li>
+                        <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" aria-label="linkedin">
+                            <span>
+                            <svg class="team-soc-icon" width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                            </svg>  
+                            </span>        
+                        </a>
+                        </li>
+                    </ul> 
                     </div>
                 </li>
                 <li class="team-item">
@@ -116,6 +174,44 @@
                     <div class="team-item-container">
                     <h3 class="team-item-subtitle">Tom Ford</h3>
                     <p class="team-item-text">Frontend Developer</p>
+                    <ul class="team-soc">
+                        <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" aria-label="instagram">
+                            <span>
+                            <svg class="team-soc-icon" width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                            </svg>
+                            </span>
+                        </a>
+                        </li>
+                        <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" aria-label="twitter">
+                            <span>
+                            <svg class="team-soc-icon" width="24" height="24">
+                                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                            </svg> 
+                            </span>
+                        </a>
+                        </li>
+                        <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" aria-label="facebook">
+                            <span>
+                            <svg class="team-soc-icon" width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                            </svg>  
+                            </span>
+                        </a>
+                        </li>
+                        <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" aria-label="linkedin">
+                            <span>
+                            <svg class="team-soc-icon" width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                            </svg>  
+                            </span>        
+                        </a>
+                        </li>
+                    </ul> 
                     </div>
                 </li>
                 <li class="team-item">
@@ -123,6 +219,44 @@
                     <div class="team-item-container">
                     <h3 class="team-item-subtitle">Camila Garcia</h3>
                     <p class="team-item-text">Marketing</p>
+                    <ul class="team-soc">
+                        <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" aria-label="instagram">
+                            <span>
+                            <svg class="team-soc-icon" width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                            </svg>
+                            </span>
+                        </a>
+                        </li>
+                        <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" aria-label="twitter">
+                            <span>
+                            <svg class="team-soc-icon" width="24" height="24">
+                                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                            </svg> 
+                            </span>
+                        </a>
+                        </li>
+                        <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" aria-label="facebook">
+                            <span>
+                            <svg class="team-soc-icon" width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                            </svg>  
+                            </span>
+                        </a>
+                        </li>
+                        <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" aria-label="linkedin">
+                            <span>
+                            <svg class="team-soc-icon" width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                            </svg>  
+                            </span>        
+                        </a>
+                        </li>
+                    </ul> 
                     </div>
                 </li>
                 <li class="team-item">
@@ -130,7 +264,106 @@
                     <div class="team-item-container">
                     <h3 class="team-item-subtitle">Daniel Wilson</h3>
                     <p class="team-item-text">UI Designer</p>
-                    </div>
+                    <ul class="team-soc">
+                        <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" aria-label="instagram">
+                            <span>
+                            <svg class="team-soc-icon" width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                            </svg>
+                            </span>
+                        </a>
+                        </li>
+                        <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" aria-label="twitter">
+                            <span>
+                            <svg class="team-soc-icon" width="24" height="24">
+                                 <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                            </svg> 
+                            </span>
+                        </a>
+                        </li>
+                        <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" aria-label="facebook">
+                            <span>
+                            <svg class="team-soc-icon" width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                            </svg>  
+                            </span>
+                        </a>
+                        </li>
+                        <li class="team-soc-item">
+                        <a class="team-soc-link link" href="" aria-label="linkedin">
+                            <span>
+                            <svg class="team-soc-icon" width="24" height="24">
+                                <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                            </svg>  
+                            </span>        
+                        </a>
+                        </li>
+                    </ul>
+                    </div> 
+            </ul>
+            </div>
+        </section>
+
+        <section class="customers">
+            <div class="container">
+            <h2 class="customers-title">Customers</h2>
+            <ul class="customers-list">
+                <li class="customers-item">
+                    <a href="" class="customers-item-link link">
+                    <span>
+                    <svg class="customers-item-icon" width="104" height="56">
+                        <use href="./images/symbol-defs.svg#icon-customers-icon1"></use>
+                    </svg>
+                    </span>
+                    </a>
+                </li>
+                <li class="customers-item">
+                    <a href="" class="customers-item-link link">
+                    <span>
+                    <svg class="customers-item-icon" width="104" height="56">
+                        <use href="./images/symbol-defs.svg#icon-customers-icon2"></use>
+                    </svg>
+                    </span>
+                    </a>
+                </li>
+                <li class="customers-item">
+                    <a href="" class="customers-item-link link">
+                    <span>
+                    <svg class="customers-item-icon" width="104" height="56">
+                        <use href="./images/symbol-defs.svg#icon-customers-icon3"></use>
+                    </svg>
+                    </span>
+                    </a>
+                </li>
+                <li class="customers-item">
+                    <a href="" class="customers-item-link link">
+                    <span>
+                    <svg class="customers-item-icon" width="104" height="56">
+                        <use href="./images/symbol-defs.svg#icon-customers-icon4"></use>
+                    </svg>
+                    </span>
+                    </a>
+                </li>
+                <li class="customers-item">
+                    <a href="" class="customers-item-link link">
+                    <span>
+                    <svg class="customers-item-icon" width="104" height="56">
+                        <use href="./images/symbol-defs.svg#icon-customers-icon5"></use>
+                    </svg>
+                    </span>
+                    </a>
+                </li>
+                <li class="customers-item">
+                    <a href="" class="customers-item-link link">
+                    <span>
+                    <svg class="customers-item-icon" width="104" height="56">
+                        <use href="./images/symbol-defs.svg#icon-customers-icon6"></use>
+                    </svg>
+                    </span>
+                    </a>
                 </li>
             </ul>
             </div>
@@ -138,14 +371,65 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-container">
         <a href="./index.html" class="footer-logo link">WEB<span class="footer-logo-accent">Studio</span></a>
         <p class="footer-text">
             Increase the flow of customers and
             sales for your business with
             digital marketing & growth solutions.
         </p>
+        <div class="footer-soc">
+        <p class="footer-soc-text">Social media</p>
+        <ul class="footer-soc-list">
+            <li class="footer-soc-item">
+                <a class="footer-soc-link link" href="" aria-label="instagram">
+                <span>
+                <svg class="footer-soc-icon" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg> 
+                </span>       
+                </a>
+            </li>
+            <li class="footer-soc-item">
+                <a class="footer-soc-link link" href="" aria-label="twitter">
+                <span>
+                    <svg class="footer-soc-icon" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>        
+                </span>
+                </a>
+            </li>
+            <li class="footer-soc-item">
+                <a class="footer-soc-link link" href="" aria-label="facebook">
+                <span>
+                    <svg class="footer-soc-icon" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg> 
+                </span>       
+                </a>
+            </li>
+            <li class="footer-soc-item">
+                <a class="footer-soc-link link" href="" aria-label="linkedin">
+                <span>
+                    <svg class="footer-soc-icon" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>        
+                </span>
+                </a>
+            </li>
+        </ul>
+        </div>
         </div>
     </footer>
+    <div class="backdrop is-hidden" data-modal>
+        <div class="modal">
+            <button type="button" class="modal-btn" data-modal-close>
+                <svg class="icon-close-black" width="8" height="8">
+                    <use href="./images/symbol-defs.svg#icon-close-black"></use>
+                </svg>
+            </button>
+        </div>
+    </div>
+    <script src="./js/modal.js"></script>
 </body>
 </html>
