--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
             <a href="./index.html" class="header-logo link">WEB<span class="header-logo-accent">Studio</span></a>
             <ul class="header-menu list">
                 <li class="header-menu-item"><a class="header-menu-link link" href="./index.html">Studio</a></li>
-                <li class="header-menu-item"><a class="header-menu-link link" href="./portfolio.html">Portfolio</a></li>
+                <li class="header-menu-item"><a class="header-menu-link link current" href="./portfolio.html">Portfolio</a></li>
                 <li class="header-menu-item"><a class="header-menu-link link" href="">Contacts</a></li>
             </ul>
         </nav>
@@ -38,7 +38,7 @@
     <main>
         <section class="section-portfolio">
             <div class="container">
-            <h1 class="visually-hidden">Section portfolio</h1>
+            <h1 class="visually-hidden section-portfolio">Section portfolio</h1>
             <ul class="buttons-list list">
                 <li class="buttons-item">
                     <button type="button" class="section-btn">All</button>
@@ -57,82 +57,127 @@
                 </li>
             </ul>
         
-            <ul class="examples list">
-                <li class="examples-list">
-                    <a href="" class="link">
+            <ul class="examples-list list">
+                <li class="examples-item">
+                    <a href="" class="examples-item-link link">
+                    <div class="examples-cover-div">
                     <img class="examples-link" src="./images/banking-app-interface-concept.jpg" alt="Banking App Interface Concept" width="360">
+                    <div class="products-cover-block">
+                        <p class="products-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                    </div>
+                    </div>
                     <div class="examples-container">
                     <h2 class="examples-subtitle">Banking App Interface Concept</h2>
                     <p class="examples-text">App</p>
-                    </div>
+                    </div> 
                 </a>
                 </li>
-                <li class="examples-list">
-                    <a href="" class="link">
+                <li class="examples-item">
+                    <a href="" class="examples-item-link link">
+                    <div class="examples-cover-div">   
                     <img class="examples-link" src="./images/cashless-payment.jpg" alt="Cashless Payment" width="360">
+                    <div class="products-cover-block">
+                        <p class="products-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                    </div>
+                    </div>
                     <div class="examples-container">
                     <h2 class="examples-subtitle">Cashless Payment</h2>
                     <p class="examples-text">Marketing</p>
                     </div>
                 </a>
                 </li>
-                <li class="examples-list">
-                    <a href="" class="link">
+                <li class="examples-item">
+                    <a href="" class="examples-item-link link">
+                    <div class="examples-cover-div"> 
                     <img class="examples-link" src="./images/meditation-app.jpg" alt="Meditation App" width="360">
+                    <div class="products-cover-block">
+                        <p class="products-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                    </div>
+                    </div>
                     <div class="examples-container">
                     <h2 class="examples-subtitle">Meditation App</h2>
                     <p class="examples-text">App</p>
                     </div>
                 </a>
                 </li>
-                <li class="examples-list">
-                    <a href="" class="link">
+                <li class="examples-item">
+                    <a href="" class="examples-item-link link">
+                    <div class="examples-cover-div">    
                     <img class="examples-link" src="./images/taxi-service.jpg" alt="Taxi service" width="360">
+                    <div class="products-cover-block">
+                        <p class="products-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                    </div>
+                    </div>
                     <div class="examples-container">
                     <h2 class="examples-subtitle">Taxi Service</h2>
                     <p class="examples-text">Marketing</p>
                     </div>
                     </a>
                 </li>
-                <li class="examples-list">
-                    <a href="" class="link">
+                <li class="examples-item">
+                    <a href="" class="examples-item-link link">
+                    <div class="examples-cover-div">   
                     <img class="examples-link" src="./images/screen-illustrations.jpg" alt="Screen Illustrations" width="360">
+                    <div class="products-cover-block">
+                        <p class="products-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                    </div>
+                    </div>
                     <div class="examples-container">
                     <h2 class="examples-subtitle">Screen Illustrations</h2>
                     <p class="examples-text">Design</p>
                     </div>
                     </a>
                 </li>
-                <li class="examples-list">
-                    <a href="" class="link">
+                <li class="examples-item">
+                    <a href="" class="examples-item-link link">
+                    <div class="examples-cover-div">   
                     <img class="examples-link" src="./images/online-courses.jpg" alt="Online Courses" width="360">
+                    <div class="products-cover-block">
+                        <p class="products-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                    </div>
+                    </div>
                     <div class="examples-container">
                     <h2 class="examples-subtitle">Online Courses</h2>
                     <p class="examples-text">Marketing</p>
                     </div>
                     </a>
                 </li>
-                <li class="examples-list">
-                    <a href="" class="link">
+                <li class="examples-item">
+                    <a href="" class="examples-item-link link">
+                    <div class="examples-cover-div">   
                     <img class="examples-link" src="./images/instagram-stories-concept.jpg" alt="Instagram Stories Concept" width="360">
+                    <div class="products-cover-block">
+                        <p class="products-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                    </div>
+                    </div>
                     <div class="examples-container">
                     <h2 class="examples-subtitle">Instagram Stories Concept</h2>
                     <p class="examples-text">Design</p>
                     </div>
                     </a>
                 </li>
-                <li class="examples-list">
-                    <a href="" class="link">
+                <li class="examples-item">
+                    <a href="" class="examples-item-link link">
+                    <div class="examples-cover-div">   
                     <img class="examples-link" src="./images/organic-food.jpg" alt="Organic Food" width="360">
+                    <div class="products-cover-block">
+                        <p class="products-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                    </div>
+                    </div>
                     <div class="examples-container">
                     <h2 class="examples-subtitle">Organic Food</h2>
                     <p class="examples-text">Web Site</p>
                     </div>
                     </a>
                 </li>
-                <li class="examples-list">
-                    <a href="" class="link">
+                <li class="examples-item">
+                    <a href="" class="examples-item-link link">
+                    <div class="examples-cover-div">       
                     <img class="examples-link" src="./images/fresh-coffee.jpg" alt="Fresh Coffee" width="360">
+                    <div class="products-cover-block">
+                        <p class="products-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                    </div>
+                    </div>
                     <div class="examples-container">
                     <h2 class="examples-subtitle">Fresh Coffee</h2>
                     <p class="examples-text">Web Site</p>
@@ -145,13 +190,54 @@
     </main>
 
     <footer class="footer">
-        <div class="container">
+        <div class="container footer-container">
         <a href="./index.html" class="footer-logo link">WEB<span class="footer-logo-accent">Studio</span></a>
         <p class="footer-text">
             Increase the flow of customers and
             sales for your business with
             digital marketing & growth solutions.
         </p>
+        <div class="footer-soc">
+        <p class="footer-soc-text">Social media</p>
+        <ul class="footer-soc-list">
+            <li class="footer-soc-item">
+                <a class="footer-soc-link link" href="" aria-label="instagram">
+                <span>
+                <svg class="footer-soc-icon" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg> 
+                </span>       
+                </a>
+            </li>
+            <li class="footer-soc-item">
+                <a class="footer-soc-link link" href="" aria-label="twitter">
+                <span>
+                    <svg class="footer-soc-icon" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>        
+                </span>
+                </a>
+            </li>
+            <li class="footer-soc-item">
+                <a class="footer-soc-link link" href="" aria-label="facebook">
+                <span>
+                    <svg class="footer-soc-icon" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg> 
+                </span>       
+                </a>
+            </li>
+            <li class="footer-soc-item">
+                <a class="footer-soc-link link" href="" aria-label="linkedin">
+                <span>
+                    <svg class="footer-soc-icon" width="24" height="24">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>        
+                </span>
+                </a>
+            </li>
+        </ul>
+        </div>
         </div>
     </footer>
 </body>
